<resources>
    <string name="app_name">Booker</string>
    <string name="logo">Booker Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="booker">Booker</string>
    <string name="username_empty">Username is empty</string>
    <string name="insert_username">Username</string>
    <string name="email_invalid">Email invalid</string>
    <string name="insert_email">Email</string>
    <string name="password_error">Password is less than 5 words</string>
    <string name="insert_password">Password</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="login">Login</string>
    <string name="dont_have_acc">Doesn\'t have an account?</string>
    <string name="pick_genre">Pick Your Genre</string>
    <string name="preferred_genre">Pick your preferred genre</string>
    <string-array name="genre">
        <item>Fiction</item>
        <item>Historical</item>
        <item>Fantasy</item>
        <item>Classics</item>
        <item>Science</item>
        <item>ScienceFiction</item>
        <item>Nonfiction</item>
        <item>Romance</item>
        <item>Mystery</item>
        <item>Horror</item>
        <item>Philosophy</item>
    </string-array>
    <string name="genre1">FICTION</string>
    <string name="genre2">HISTORICAL</string>
    <string name="genre3">FANTASY</string>
    <string name="genre4">CLASSICS</string>
    <string name="genre5">SCI - FI</string>
    <string name="genre6">NON-FICTION</string>
    <string name="genre7">ROMANCE</string>
    <string name="genre8">MYSTERY</string>
    <string name="genre9">HORROR</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Author</string>
    <string name="book_rating">4.5/5</string>
    <string name="book_image">Book Image</string>
    <string name="for_you">For You</string>
    <string name="top_rated">Top Rated</string>
    <string name="my_books">My Books</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="genre">Genre</string>
    <string name="newest">Newest</string>
    <string name="user">User</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="rate_this_book">Rate This Book!</string>
    <string name="your_vote">Vote</string>
    <string name="get_this_book">Get This Book!</string>
    <string name="description">Description</string>
    <string name="book_desciption">Book Description</string>
    <string name="book_genre">Book Genre</string>
    <string name="page">Page</string>
    <string name="book_page">Book Page</string>
    <string name="similar_books">Similar Books</string>
    <string name="dark_mode">Dark Mode</string>
    <string-array name="newest">
        <item>Newest</item>
        <item>Oldest</item>
        <item>High Rated</item>
        <item>Low Rated</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_result">No Results</string>
    <string name="copyright">\@2022 Booker</string>
    <string name="success">Success</string>
    <string name="search_result">%1$d Result Found For "%2$s"</string>
    <string name="content_photo">book_image</string>
    <string name="search_hint">Search Book</string>
    <string name="logout">Logout</string>
    <string name="book_detail">Book Detail</string>
    <string name="user_vote">Your Vote</string>
    <string name="my_profile">My Profile</string>
    <string name="appbar">AppBar</string>
    <string name="image">image</string>
    <string name="vote">Vote</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="old_password">Old Password</string>
    <string name="confirm">Confirm</string>
    <string name="you_have_not_rated_any_books_yet">You have not rated any books yet</string>
</resources>