<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".booklayout.BookLayoutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/book_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.CapstoneSean.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:title="@string/book_detail"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:srcCompat="@drawable/linear_color"
            android:contentDescription="@string/appbar" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/iv_book_image"
            android:layout_width="126dp"
            android:layout_height="174dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.192"
            app:srcCompat="@drawable/ic_baseline_book"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_book_author"
            android:layout_width="230dp"
            android:layout_height="66dp"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:text="@string/book_author"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintStart_toEndOf="@+id/iv_book_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_title" />

        <TextView
            android:id="@+id/tv_book_title"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:textColor="?attr/colorSecondaryVariant"
            android:text="@string/book_title"
            android:textSize="34sp"
            android:visibility="visible"
            app:layout_constraintStart_toEndOf="@+id/iv_book_image"
            app:layout_constraintTop_toTopOf="@+id/iv_book_image" />

        <TextView
            android:id="@+id/tv_book_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/book_rating"
            android:textColor="?attr/colorSecondaryVariant"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/iv_book_image"
            app:layout_constraintHorizontal_bias="0.592"
            app:layout_constraintStart_toStartOf="@+id/iv_book_image"
            app:layout_constraintTop_toBottomOf="@+id/iv_book_image" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_book_rating"
            app:layout_constraintEnd_toStartOf="@+id/tv_book_rating"
            app:layout_constraintTop_toTopOf="@+id/tv_book_rating"
            app:srcCompat="@drawable/ic_baseline_star"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_rate_this_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_this_book"
            android:textColor="?attr/colorSecondaryVariant"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/tv_book_rating"
            app:layout_constraintStart_toStartOf="@+id/tv_book_author"
            app:layout_constraintTop_toTopOf="@+id/tv_book_rating" />


        <Button
            android:id="@+id/button_book_link"
            android:layout_width="187dp"
            android:layout_height="53dp"
            android:layout_marginTop="32dp"
            android:text="@string/get_this_book"
            android:background="@drawable/green_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_page" />

        <TextView
            android:id="@+id/tv_text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/tv_book_desciption"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:text="@string/book_desciption"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_text_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_description" />

        <TextView
            android:id="@+id/tv_text_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/genre"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/tv_text_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_desciption" />

        <TextView
            android:id="@+id/tv_book_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_genre"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/tv_text_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_genre" />

        <TextView
            android:id="@+id/tv_text_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/page"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/tv_text_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_genre" />

        <TextView
            android:id="@+id/tv_book_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_page"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/tv_text_page"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_page" />

        <TextView
            android:id="@+id/tv_text_similar_books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:text="@string/similar_books"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/tv_text_page"
            app:layout_constraintTop_toBottomOf="@+id/button_book_link" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_book_list_horizontal"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_text_similar_books"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_similar_books"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/book_horizontal_list" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.0">

            <include layout="@layout/shimmer_book_layout" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_layout"
            android:layout_width="414dp"
            android:layout_height="180dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_similar_books"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <include layout="@layout/shimmer_horizontal" />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/vote"
            app:layout_constraintBottom_toBottomOf="@+id/tv_user_vote"
            app:layout_constraintStart_toEndOf="@+id/tv_user_vote"
            app:layout_constraintTop_toTopOf="@+id/tv_user_vote" />


                <include layout="@layout/shimmer_horizontal" />

                <include layout="@layout/shimmer_horizontal" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <Button
            android:id="@+id/button_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/light_green"
            android:text="@string/your_vote"
            app:layout_constraintStart_toEndOf="@+id/tv_rate_this_book"
            app:layout_constraintTop_toTopOf="@+id/tv_rate_this_book" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tv_rate_this_book"
            app:layout_constraintTop_toBottomOf="@+id/tv_rate_this_book"
            app:srcCompat="@drawable/ic_baseline_star"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_vote"
            android:textColor="?attr/colorSecondaryVariant"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

