<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="190dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="#FAF3F3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/book_image3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/book_image"
            android:src="@drawable/ellipse_1"
            app:layout_constraintBottom_toTopOf="@id/book_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/book_title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_regular"
            android:padding="5dp"
            android:text="@string/book_title"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/book_image" />

        <TextView
            android:id="@+id/book_author3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_extralight"
            android:padding="5dp"
            android:text="@string/book_author"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/book_title" />

        <TextView
            android:id="@+id/book_rating3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_regular"
            android:padding="5dp"
            android:text="@string/book_rating"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/book_author" />
    </LinearLayout>

</androidx.cardview.widget.CardView>