<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".genrePick.GenrePickActivity">

    <TextView
        android:id="@+id/pick_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center_horizontal"
        android:text="@string/pick_genre"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/preferred_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/preferred_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="108dp"
        android:fontFamily="@font/inter_medium"
        android:gravity="center_horizontal"
        android:text="@string/preferred_genre"
        android:textColor="#BDBDBD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick_genre" />


    <CheckBox
        android:id="@+id/genre1"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/circular_button"
        android:button="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/genre1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/genre2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferred_genre" />

    <CheckBox
        android:id="@+id/genre2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/circular_button"
        android:button="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/genre2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/genre1"
        app:layout_constraintTop_toBottomOf="@+id/preferred_genre" />

    <CheckBox
        android:id="@+id/genre3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/circular_button"
        android:button="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/genre3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/genre2"
        app:layout_constraintTop_toBottomOf="@+id/preferred_genre" />

    <CheckBox
        android:id="@+id/genre4"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_button"
        android:button="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/genre4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/genre2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre1" />

    <CheckBox
        android:id="@+id/genre5"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_button"
        android:button="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/genre5"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/genre4"
        app:layout_constraintTop_toBottomOf="@+id/genre2" />

    <CheckBox
        android:id="@+id/genre6"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/circular_button"
        android:button="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/genre6"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toEndOf="@+id/genre5"
        app:layout_constraintTop_toBottomOf="@+id/genre3" />

    <CheckBox
        android:id="@+id/genre7"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_button"
        android:button="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/genre7"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/genre8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre4" />

    <CheckBox
        android:id="@+id/genre8"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circular_button"
        android:button="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/genre8"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/genre7"
        app:layout_constraintTop_toBottomOf="@+id/genre5" />

    <CheckBox
        android:id="@+id/genre9"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/circular_button"
        android:button="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/genre9"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/genre8"
        app:layout_constraintTop_toBottomOf="@+id/genre6" />

    <com.example.capstonesean.customView.MyGenreButton
        android:id="@+id/genre_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/genre_disable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre8"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>